update values to better display value descriptions